force-app/main/default/objects/Test_Run__c/Test_Run__c.object-meta.xml
<CustomObject>
    <description>Records a single execution of a Test Script by the Agentforce QA agent. Captures timing, pass/fail status, step-level results, and links back to the session on the browser automation microservice.</description>
    <label>Test Run</label>
    <nameField>
        <label>Test Run Name</label>
        <type>AutoNumber</type>
        <displayFormat>RUN-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>