force-app/main/default/objects/Test_Run__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>Total elapsed time in seconds from when the run started to when it completed. Calculated from Start Time and End Time.</description>
    <label>Duration (Seconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>