force-app/main/default/objects/Test_Run__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Timestamp when the browser automation agent finished executing this test run (passed, failed, or errored).</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>