force-app/main/default/objects/Test_Run__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Technical error details when the run status is Error. Contains stack traces or service error messages from the browser automation microservice.</description>
    <inlineHelpText>Populated when Status = Error. Contains the technical error from the browser service.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>