force-app/main/default/objects/Test_Run__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Unique identifier for the corresponding browser automation session on the microservice. Used to correlate Salesforce run records with service-side logs and screenshots.</description>
    <inlineHelpText>Links this record to the browser service session. Used for debugging and screenshot retrieval.</inlineHelpText>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>