force-app/main/default/objects/Test_Run__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Timestamp when the browser automation agent began executing this test run.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>