force-app/main/default/objects/Test_Run__c/fields/Steps_Failed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Failed__c</fullName>
    <description>Count of individual test steps that failed during this run.</description>
    <label>Steps Failed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>