force-app/main/default/objects/Test_Run__c/fields/Steps_Passed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Passed__c</fullName>
    <description>Count of individual test steps that passed during this run. Updated by the automation agent as steps complete.</description>
    <label>Steps Passed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>