force-app/main/default/objects/Test_Run__c/fields/Steps_Total__c.field-meta.xml
<CustomField>
    <fullName>Steps_Total__c</fullName>
    <description>Total number of steps that were eligible to run (active steps only) at the time of execution.</description>
    <label>Steps Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>