force-app/main/default/objects/Test_Run__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>AI-generated natural language summary of what happened during this test run, including which steps passed or failed and any notable observations.</description>
    <inlineHelpText>Auto-generated by the Agentforce agent after the run completes.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>