force-app/main/default/objects/Test_Run__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <description>The Test Script that was executed in this run.</description>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>