force-app/main/default/objects/Test_Run__c/fields/Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Test_Suite__c</fullName>
    <description>The Test Suite that triggered this run, if executed as part of a suite batch. Blank if the script was run individually.</description>
    <inlineHelpText>Populated when this run was triggered as part of a suite execution.</inlineHelpText>
    <label>Test Suite</label>
    <referenceTo>Test_Suite__c</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>