force-app/main/default/objects/Test_Run__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <description>The Salesforce user who initiated this test run, either manually or via the Agentforce agent.</description>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Runs (Triggered By)</relationshipLabel>
    <relationshipName>Test_Runs_Triggered_By</relationshipName>
    <type>Lookup</type>
</CustomField>